refact(AlbinaUtil): use StandardCharsets.UTF_8